# pwledger

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.txt  package-extension.sh  web-ext-config.js
apps/: CMakeLists.txt
apps/cli/: AppState.h  CommandLoop.cc  CommandLoop.h  Display.cc  Display.h  EntryOps.cc  EntryOps.h  SecretIO.cc  SecretIO.h  main.cc
apps/native_host/: CommandHandlers.cc  CommandHandlers.h  MessageLoop.cc  MessageLoop.h  NativeMessaging.cc  NativeMessaging.h  ResponseHelpers.h  StringUtils.h  main.cc
cmake/: FindSodium.cmake  PwledgerCompilerMSVC.cmake  PwledgerCompilerUnix.cmake
cmake/toolchains/: mingw-w64-x86_64.cmake
extension/: background.js  browser-polyfill.js  content.css  content.js  manifest.json  pwledger-chrome.json  pwledger.json
extension/popup/: popup.css  popup.html  popup.js
include/: #SecureString.h#  .#SecureString.h  Secret.h  SecureString.h  TerminalManager.h
include/pwledger/: Clipboard.h  ClipboardTimer.h  Config.h  EntryMetadata.h  EntrySecurityPolicy.h  PrimaryTable.h  ProcessHardening.h  Secret.h  SecretEntry.h  TerminalManager.h  Uuid.h  VaultCrypto.h  VaultIO.h  VaultPath.h  VaultSerializer.h  uuid.h
pwledger/: CMakeLists.txt  initial.cc
setup/: setup.ps1  setup.sh
src/: CMakeLists.txt  Clipboard.cc  Config.cc  ProcessHardening.cc  Secret.cc  SecretEntry.cc  TerminalManager.cc  VaultCrypto.cc  VaultIO.cc  VaultPath.cc  VaultSerializer.cc  uuid.cc
tests/: CMakeLists.txt  test_config.cc  test_secret.cc  test_vault.cc
